--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
