--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
