--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/x-date-pickers": "^6.10.2",
+    "@mui/x-date-pickers-pro": "^6.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "apexcharts": "^3.37.0",
     "axios": "^1.2.1",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.2.0",
     "formik": "^2.2.9",
     "jsvectormap": "^1.5.1",
@@ -27,6 +31,7 @@
     "react-modal": "^3.16.1",
     "react-modal-video": "^2.0.1",
     "react-parallax": "^3.5.1",
+    "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
