--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-modal-video": "^2.0.1",
     "react-parallax": "^3.5.1",
     "react-paypal-button-v2": "^2.6.3",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
