--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/resource-timegrid": "^6.1.8",
+    "@mui/icons-material": "^5.14.3",
     "@mui/x-date-pickers": "^6.10.2",
     "@mui/x-date-pickers-pro": "^6.10.2",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/line": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
